Add experimental block break delay option (see #20)